# stemtivistas

./: .gitignore  README.md  setup.ps1
stemtivistas_backend/: Dockerfile  app.py  pyproject.toml  utils.py
stemtivistas_frontend/: package-lock.json  package.json
stemtivistas_frontend/app/: Home.module.css  globals.css  layout.js  page.js
stemtivistas_frontend/app/activities/: activities.module.css  page.js
stemtivistas_frontend/app/components/: Navbar.js  Navbar.module.css
stemtivistas_frontend/app/mission/: mission.module.css  page.js
